# prompt-mechinterp

./: .gitignore  CLAUDE.md  README.md  RUN_INSTRUCTIONS.md  SKILL.md  pyproject.toml  subcortical_tuning_test.py
docs/: KNOWN_GOOD_APPROACHES.md  PIPELINE_EXPLAINED.md  PITFALLS.md
infra/: vastai_setup.sh
src/prompt_mechinterp/: __init__.py  constants.py
src/prompt_mechinterp/analysis/: __init__.py  compare.py  formatting.py  metrics.py  report.py
src/prompt_mechinterp/engine/: __init__.py  model_adapter.py  run_analysis.py
src/prompt_mechinterp/prep/: __init__.py  inputs.py  regions.py
src/prompt_mechinterp/render/: __init__.py  _shared.py  aggregate.py  cooking_curves.py  heatmap.py  layer_gif.py  loaders.py
tests/: test_constants.py
tests/analysis/: test_compare.py  test_formatting.py  test_metrics.py  test_report.py
tests/engine/: test_model_adapter.py
tests/prep/: test_inputs.py  test_regions.py
tests/render/: test_cooking_curves.py  test_shared.py
